Async Anko coroutines, fillTracks finished

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
+    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation 'com.android.support:support-v4:27.1.1'
     implementation "org.mapsforge:mapsforge-core:$mapsforge_version"
