--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "org.mapsforge:mapsforge-map-reader:$mapsforge_version"
     implementation "org.mapsforge:mapsforge-themes:$mapsforge_version"
     implementation "org.mapsforge:mapsforge-map-android:$mapsforge_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 }
 kotlin {
     experimental {
