Now with android title bar and drawer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/menu'] } }
+    sourceSets {
+        main { res.srcDirs = ['src/main/res', 'src/main/res/menu', 'src/main/res/values-v21'] }
+    }
 }
 
 dependencies {
@@ -29,6 +31,7 @@ dependencies {
     implementation files('libs/fit_14.10.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
