--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait"
@@ -32,7 +31,8 @@
         <activity android:name=".ui.MapActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".ui.AppPreferenceActivity" />
+        <activity android:name=".ui.PreferenceActivity"
+            android:theme="@style/AppTheme.Preference"/>
 
         <service
             android:name=".android.Service"
