--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 06 05:49:50 CEST 2018
-sdk.dir=C\:\\Android\\Sdk
+#Sat Dec 15 14:12:08 CET 2018
+sdk.dir=/home/uwe/Android/Sdk
