Coroutines are now not experimental any more

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:$anko_version"
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation 'com.android.support:support-v4:27.1.1'
     implementation "org.mapsforge:mapsforge-core:$mapsforge_version"
@@ -43,9 +44,4 @@ dependencies {
     implementation "org.mapsforge:mapsforge-themes:$mapsforge_version"
     implementation "org.mapsforge:mapsforge-map-android:$mapsforge_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-}
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
 }
