--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.3.11'
-    ext.anko_version = '0.10.4'
+    ext.coroutines_core_version = '1.0.1'
+    ext.anko_version = '0.10.8'
     ext.gson_version = '2.8.2'
     ext.mapsforge_version = '0.9.1'
     repositories {
