--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="eu.selfhost.riegel.superfit">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -7,12 +8,15 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:name=".android.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
+        android:fullBackupContent="true"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:targetApi="q">
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait"
