--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 16 00:26:13 CET 2018
-sdk.dir=C\:\\Users\\urieg\\AppData\\Local\\Android\\Sdk
+#Sat Dec 28 12:02:47 CET 2019
+sdk.dir=/home/uwe/Android/Sdk
