--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 28 12:02:47 CET 2019
-sdk.dir=/home/uwe/Android/Sdk
+#Mon May 11 16:57:02 CEST 2020
+sdk.dir=/media/speicher/Android/Sdk
