--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = "1.4.21"
     ext.coroutines_core_version = '1.0.1'
     ext.anko_version = '0.10.8'
-    ext.gson_version = '2.8.2'
+    ext.gson_version = '2.8.6'
     ext.mapsforge_version = '0.11.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
