--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 11 16:57:02 CEST 2020
-sdk.dir=/media/speicher/Android/Sdk
+#Fri Jan 01 12:49:30 CET 2021
+sdk.dir=/home/uwe/Android/Sdk
