--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 01 12:49:30 CET 2021
-sdk.dir=/home/uwe/Android/Sdk
+#Thu Jul 29 13:48:16 CEST 2021
+sdk.dir=/home/uwe/Projekte/Android/Sdk
