--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,22 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:name=".android.Application"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
-        android:fullBackupContent="true"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme.NoActionBar"
         tools:targetApi="q">
         <activity
+            android:name=".ui.MapDownloadActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,16 +34,15 @@
         <activity
             android:name=".ui.DisplayActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.FullScreen"/>
-
-        <activity android:name=".ui.MapActivity"
+            android:theme="@style/AppTheme.FullScreen" />
+        <activity
+            android:name=".ui.MapActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.PreferenceActivity"
+            android:theme="@style/AppTheme.Preference" />
 
-        <activity android:name=".ui.PreferenceActivity"
-            android:theme="@style/AppTheme.Preference"/>
-
-        <service
-            android:name=".android.Service" />
+        <service android:name=".android.Service" />
     </application>
 
 </manifest>
