--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.5.20"
+    ext.kotlin_version = "1.4.21"
     ext.coroutines_core_version = '1.0.1'
     ext.anko_version = '0.10.8'
     ext.gson_version = '2.8.6'
-    ext.mapsforge_version = '0.16.0'
+    ext.mapsforge_version = '0.11.0'
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
 }
 
