--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,16 +11,15 @@ android {
             keyPassword ANDROID_KEY_PASSWORD
         }
     }
-    compileSdkVersion 30
+    compileSdk 30
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
-    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "de.uriegel.superfit"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdk 30
         versionCode 1
         versionName "1.0"
         signingConfig signingConfigs.target
@@ -28,7 +27,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.target
         }
         debug {
@@ -37,39 +36,17 @@ android {
     }
     buildFeatures {
         viewBinding true
-        dataBinding true
-    }
-    sourceSets {
-        main { res.srcDirs = ['src/main/res', 'src/main/res/menu', 'src/main/res/values-v21'] }
     }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation files('libs/antpluginlib_3-5-0.jar')
-    implementation files('libs/fit_14.10.jar')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.3.1"
-    implementation 'androidx.activity:activity-ktx:1.3.1'
-    implementation "androidx.core:core-ktx:1.6.0"
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
-    implementation 'androidx.preference:preference-ktx:1.1.1'
-    implementation "org.jetbrains.anko:anko-common:$anko_version"
-    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
-    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
-    implementation "com.google.code.gson:gson:$gson_version"
-    implementation "org.mapsforge:mapsforge-core:$mapsforge_version"
-    implementation "org.mapsforge:mapsforge-map:$mapsforge_version"
-    implementation "org.mapsforge:mapsforge-map-reader:$mapsforge_version"
-    implementation "org.mapsforge:mapsforge-themes:$mapsforge_version"
-    implementation "org.mapsforge:mapsforge-map-android:$mapsforge_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'com.github.uriegel:ActivityExtensions:2.3.0'
 }
