--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'com.github.uriegel:ActivityExtensions:2.3.0'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 }
