--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
 
         <activity android:name=".ui.PreferenceActivity" />
 
+        <activity android:name=".ui.MapActivity" android:theme="@style/Theme.SuperFit.NoActionBar" />
+
     </application>
 
 </manifest>
