--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:exported="true"
             android:theme="@style/Theme.SuperFit.Map" />
         <activity
+            android:name=".ui.TrackActivity"
+            android:exported="true"
+            android:theme="@style/Theme.SuperFit.Map" />
+        <activity
             android:name=".ui.SensorDevicesActivity"
             android:exported="true" />
         <activity
@@ -39,14 +43,10 @@
             android:theme="@style/Theme.SuperFit.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ui.PreferenceActivity" />
-        <activity
-            android:name=".ui.KannWegMapActivity"
-            android:theme="@style/Theme.SuperFit.Map" />
 
         <service android:name=".android.Service" />
     </application>
