--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,6 @@ dependencies {
     implementation "org.mapsforge:mapsforge-map-reader:0.16.0"
     implementation "org.mapsforge:mapsforge-themes:0.16.0"
     implementation "org.mapsforge:mapsforge-map-android:0.16.0"
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     kapt 'androidx.room:room-compiler:2.3.0'
 }
