location in background

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,10 @@
         </activity>
         <activity android:name=".ui.PreferenceActivity" />
 
-        <service android:name=".android.Service" />
+        <service
+            android:name=".android.Service"
+            android:enabled="true"
+            android:foregroundServiceType="location" />
     </application>
 
 </manifest>
